[gd_scene load_steps=5 format=3 uid="uid://gyqvsuirh7wl"]

[ext_resource type="Script" uid="uid://cygul4eq5iu1t" path="res://bala.gd" id="1_jk513"]
[ext_resource type="Texture2D" uid="uid://c2q7n8wm11ayy" path="res://bullet.png" id="2_ag3k0"]
[ext_resource type="AudioStream" uid="uid://0krr5g18gody" path="res://bullet_sound.mp3" id="3_tqo1u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wrbek"]
size = Vector2(21, 21)

[node name="Bala" type="Area2D"]
z_index = 10
collision_layer = 4
collision_mask = 2
script = ExtResource("1_jk513")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.49999955, 0.74987507)
scale = Vector2(0.2079208, 0.2050025)
texture = ExtResource("2_ag3k0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_wrbek")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tqo1u")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
